# pipeview

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  format.rs  highlight.rs  main.rs  pipeline.rs
src/tui/: compact.rs  fullscreen.rs  mod.rs
tests/: format_detection.rs  passthrough.rs
