[package]
name = "pipespy"
version = "0.1.0"
edition = "2021"
description = "Real-time pipeline debugger — pv shows bytes, pipespy shows your data"
license = "MIT"
repository = "https://github.com/jasonm4130/pipespy"
homepage = "https://github.com/jasonm4130/pipespy"
readme = "README.md"
keywords = ["cli", "pipeline", "tui", "debugging"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
